antlr4/VeliaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Velia.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Nxl.Compiler.Velia.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class VeliaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, PACKAGE=3, USE=4, PKG=5, STRUCT=6, UNION=7, TRAIT=8, EXTEND=9, 
		WITH=10, IMPL=11, TYPE=12, ENUM=13, EXTERN=14, FN=15, LET=16, CONST=17, 
		STATIC=18, UNSAFE=19, CONSTEXPR=20, MUTABLE=21, INLINE=22, ASM=23, IF=24, 
		ELSE=25, WHILE=26, FOR=27, MATCH=28, RETURN=29, BREAK=30, CONTINUE=31, 
		THROW=32, AND=33, OR=34, NOT=35, REQUIRES=36, MESSAGE=37, BOOLEAN_LITERAL=38, 
		NUMBER_LITERAL=39, HEX_LITERAL=40, STRING_LITERAL=41, CHAR_LITERAL=42, 
		IDENTIFIER=43, LPAREN=44, RPAREN=45, LBRACE=46, RBRACE=47, ARRAY=48, LBRACKET=49, 
		RBRACKET=50, SEMICOLON=51, COMMA=52, DOT=53, ARROW=54, COLON=55, DOUBLE_COLON=56, 
		AT=57, HASH=58, QUESTION=59, UNDERSCORE=60, ASSIGN=61, PLUS_ASSIGN=62, 
		MINUS_ASSIGN=63, STAR_ASSIGN=64, SLASH_ASSIGN=65, MOD_ASSIGN=66, AND_ASSIGN=67, 
		OR_ASSIGN=68, XOR_ASSIGN=69, LSHIFT_ASSIGN=70, RSHIFT_ASSIGN=71, EQ=72, 
		NE=73, LT=74, LE=75, GT=76, GE=77, PLUS=78, MINUS=79, STAR=80, SLASH=81, 
		MOD=82, AND_OP=83, OR_OP=84, NOT_OP=85, AMPERSAND=86, PIPE=87, CARET=88, 
		LSHIFT=89, RSHIFT=90, INC=91, DEC=92, LINE_COMMENT=93, BLOCK_COMMENT=94, 
		WS=95;
	public const int
		RULE_program = 0, RULE_packageDeclaration = 1, RULE_useDeclaration = 2, 
		RULE_topLevelDeclaration = 3, RULE_attribute = 4, RULE_preprocessorDirective = 5, 
		RULE_structDeclaration = 6, RULE_structMember = 7, RULE_unionBlock = 8, 
		RULE_fieldDeclaration = 9, RULE_traitDeclaration = 10, RULE_traitMember = 11, 
		RULE_extendDeclaration = 12, RULE_typeAliasDeclaration = 13, RULE_enumDeclaration = 14, 
		RULE_enumMember = 15, RULE_externBlock = 16, RULE_externDeclaration = 17, 
		RULE_functionDeclaration = 18, RULE_functionSignature = 19, RULE_functionContract = 20, 
		RULE_parameterList = 21, RULE_parameter = 22, RULE_variableDeclaration = 23, 
		RULE_statement = 24, RULE_block = 25, RULE_ifStatement = 26, RULE_whileStatement = 27, 
		RULE_forStatement = 28, RULE_matchStatement = 29, RULE_matchArm = 30, 
		RULE_matchPattern = 31, RULE_returnStatement = 32, RULE_throwStatement = 33, 
		RULE_expressionStatement = 34, RULE_inlineAsmStatement = 35, RULE_asmLine = 36, 
		RULE_expression = 37, RULE_lambdaExpression = 38, RULE_arrayLiteral = 39, 
		RULE_argumentList = 40, RULE_type = 41, RULE_arrayPrefix = 42, RULE_typeSuffix = 43, 
		RULE_primaryType = 44, RULE_functionType = 45, RULE_qualifiedName = 46, 
		RULE_typeList = 47;
	public static readonly string[] ruleNames = {
		"program", "packageDeclaration", "useDeclaration", "topLevelDeclaration", 
		"attribute", "preprocessorDirective", "structDeclaration", "structMember", 
		"unionBlock", "fieldDeclaration", "traitDeclaration", "traitMember", "extendDeclaration", 
		"typeAliasDeclaration", "enumDeclaration", "enumMember", "externBlock", 
		"externDeclaration", "functionDeclaration", "functionSignature", "functionContract", 
		"parameterList", "parameter", "variableDeclaration", "statement", "block", 
		"ifStatement", "whileStatement", "forStatement", "matchStatement", "matchArm", 
		"matchPattern", "returnStatement", "throwStatement", "expressionStatement", 
		"inlineAsmStatement", "asmLine", "expression", "lambdaExpression", "arrayLiteral", 
		"argumentList", "type", "arrayPrefix", "typeSuffix", "primaryType", "functionType", 
		"qualifiedName", "typeList"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#if'", "'=>'", "'package'", "'use'", "'pkg'", "'struct'", "'union'", 
		"'trait'", "'extend'", "'with'", "'impl'", "'type'", "'enum'", "'extern'", 
		"'fn'", "'let'", "'const'", "'static'", "'unsafe'", "'constexpr'", "'mutable'", 
		"'inline'", "'asm'", "'if'", "'else'", "'while'", "'for'", "'match'", 
		"'return'", "'break'", "'continue'", "'throw'", "'and'", "'or'", "'not'", 
		"'requires'", "'message'", null, null, null, null, null, null, "'('", 
		"')'", "'{'", "'}'", "'[]'", "'['", "']'", "';'", "','", "'.'", "'->'", 
		"':'", "'::'", "'@'", "'#'", "'?'", "'_'", "'='", "'+='", "'-='", "'*='", 
		"'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", "'=='", "'!='", 
		"'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", 
		"'||'", "'!'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "'++'", "'--'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "PACKAGE", "USE", "PKG", "STRUCT", "UNION", "TRAIT", 
		"EXTEND", "WITH", "IMPL", "TYPE", "ENUM", "EXTERN", "FN", "LET", "CONST", 
		"STATIC", "UNSAFE", "CONSTEXPR", "MUTABLE", "INLINE", "ASM", "IF", "ELSE", 
		"WHILE", "FOR", "MATCH", "RETURN", "BREAK", "CONTINUE", "THROW", "AND", 
		"OR", "NOT", "REQUIRES", "MESSAGE", "BOOLEAN_LITERAL", "NUMBER_LITERAL", 
		"HEX_LITERAL", "STRING_LITERAL", "CHAR_LITERAL", "IDENTIFIER", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "ARRAY", "LBRACKET", "RBRACKET", "SEMICOLON", 
		"COMMA", "DOT", "ARROW", "COLON", "DOUBLE_COLON", "AT", "HASH", "QUESTION", 
		"UNDERSCORE", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", 
		"SLASH_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
		"LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "EQ", "NE", "LT", "LE", "GT", "GE", 
		"PLUS", "MINUS", "STAR", "SLASH", "MOD", "AND_OP", "OR_OP", "NOT_OP", 
		"AMPERSAND", "PIPE", "CARET", "LSHIFT", "RSHIFT", "INC", "DEC", "LINE_COMMENT", 
		"BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Velia.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static VeliaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public VeliaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public VeliaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(VeliaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PackageDeclarationContext packageDeclaration() {
			return GetRuleContext<PackageDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UseDeclarationContext[] useDeclaration() {
			return GetRuleContexts<UseDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UseDeclarationContext useDeclaration(int i) {
			return GetRuleContext<UseDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelDeclarationContext[] topLevelDeclaration() {
			return GetRuleContexts<TopLevelDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelDeclarationContext topLevelDeclaration(int i) {
			return GetRuleContext<TopLevelDeclarationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeliaVisitor<TResult> typedVisitor = visitor as IVeliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PACKAGE) {
				{
				State = 96;
				packageDeclaration();
				}
			}

			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==USE) {
				{
				{
				State = 99;
				useDeclaration();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << STRUCT) | (1L << TRAIT) | (1L << EXTEND) | (1L << TYPE) | (1L << ENUM) | (1L << EXTERN) | (1L << FN) | (1L << LET) | (1L << CONST) | (1L << STATIC) | (1L << UNSAFE) | (1L << CONSTEXPR) | (1L << LBRACKET))) != 0)) {
				{
				{
				State = 105;
				topLevelDeclaration();
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 111;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACKAGE() { return GetToken(VeliaParser.PACKAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(VeliaParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(VeliaParser.SEMICOLON, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.EnterPackageDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.ExitPackageDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeliaVisitor<TResult> typedVisitor = visitor as IVeliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackageDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PackageDeclarationContext packageDeclaration() {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(PACKAGE);
			State = 114;
			Match(STRING_LITERAL);
			State = 115;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UseDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USE() { return GetToken(VeliaParser.USE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PKG() { return GetToken(VeliaParser.PKG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING_LITERAL() { return GetTokens(VeliaParser.STRING_LITERAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL(int i) {
			return GetToken(VeliaParser.STRING_LITERAL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(VeliaParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(VeliaParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(VeliaParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(VeliaParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(VeliaParser.COMMA, i);
		}
		public UseDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_useDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.EnterUseDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.ExitUseDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeliaVisitor<TResult> typedVisitor = visitor as IVeliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUseDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UseDeclarationContext useDeclaration() {
		UseDeclarationContext _localctx = new UseDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_useDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(USE);
			State = 118;
			Match(PKG);
			State = 119;
			Match(STRING_LITERAL);
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACE) {
				{
				State = 120;
				Match(LBRACE);
				State = 121;
				Match(STRING_LITERAL);
				State = 126;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 122;
					Match(COMMA);
					State = 123;
					Match(STRING_LITERAL);
					}
					}
					State = 128;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 129;
				Match(RBRACE);
				}
			}

			State = 132;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructDeclarationContext structDeclaration() {
			return GetRuleContext<StructDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TraitDeclarationContext traitDeclaration() {
			return GetRuleContext<TraitDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExtendDeclarationContext extendDeclaration() {
			return GetRuleContext<ExtendDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeAliasDeclarationContext typeAliasDeclaration() {
			return GetRuleContext<TypeAliasDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumDeclarationContext enumDeclaration() {
			return GetRuleContext<EnumDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration() {
			return GetRuleContext<VariableDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExternBlockContext externBlock() {
			return GetRuleContext<ExternBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorDirectiveContext preprocessorDirective() {
			return GetRuleContext<PreprocessorDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext attribute() {
			return GetRuleContext<AttributeContext>(0);
		}
		public TopLevelDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.EnterTopLevelDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IVeliaListener typedListener = listener as IVeliaListener;
			if (typedListener != null) typedListener.ExitTopLevelDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVeliaVisitor<TResult> typedVisitor = visitor as IVeliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopLevelDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelDeclarationContext topLevelDeclaration() {
		TopLevelDeclarationContext _localctx = new TopLevelDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_topLevelDeclaration);
		try {
			State = 144;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134;
				functionDeclaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 135;
				structDeclaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 136;
				traitDeclaration();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 137;
				extendDeclaration();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 138;
				typeAliasDeclaration();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 139;
				enumDeclaration();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 140;
				variableDeclaration();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 141;
				externBlock();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 142;
				preprocessorDirective();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 143;
				attribute();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
